fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,10 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #DD356E;
   font-weight: bold;
 }
+
+.profilePicture {
+  padding-top: 50px;
+}
 @media screen and (max-width: 768px) {
   .fh5co-nav .menu-1 {
     display: none;
@@ -255,7 +259,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #homeContent {
-  padding-bottom: 108px;
+  padding-bottom: 60px;
   padding-top: 30px;
 }
 
